fixed: button icons were the wrong colour on non-default buttons
now the same colour as text (white), on coloured buttons

--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -116,6 +116,11 @@
   font-size: 14px;
   line-height: 1;
 }
+.btn-positive .icon,
+.btn-negative .icon,
+.btn-warning .icon {
+  color: #fff;
+}
 
 // Add the margin next to the icon if there is text in the button too
 .btn .icon-text {
